--- a/styles/button/button.css
+++ b/styles/button/button.css
@@ -55,29 +55,4 @@ body {
 /* Clase para mostrar el submenú */
 .submenu.show {
   display: block;
-}
-
-html {
-  background-image: url("../global/FONDO.png");
-}
-
-nav {
-  background-color: rgba(50, 254, 33, 0.85);
-  width: 100%;
-  height: 6vh;
-  align-items: center;
-  justify-content: space-between;
-  display: flex;
-  box-sizing: border-box;
-}
-
-.nav_menu {
-  background-color: rgba(50, 254, 33, 0.85);
-  border-radius: 3px;
-  width: 5vw;
-  height: 5vh;
-}
-
-#barras {
-  color: black;
-}/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=button.css.map */
