--- a/styles/button/button.css
+++ b/styles/button/button.css
@@ -28,7 +28,7 @@ body {
 .submenu {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: rgba(247, 175, 12, 0.5019607843);
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
