--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,6 +1,8 @@
 @use './mixins/mixins.scss' as mix;
 @use './button/button.scss';
 @use './carusel/carusel.scss';
+@use './music_player/music_player.scss';
+
 body{
     background-image: url("../global/FONDO.png");   
     
@@ -15,8 +17,8 @@ nav{
 
 .nav_menu{
     background-color: (#32fe2180);
-    border-radius: 3px;
-    width: 5vw;
+    border-radius: 10px;
+    width: 15vw;
     height: 5vh;
     
 }
