--- a/styles/carusel/carusel.css
+++ b/styles/carusel/carusel.css
@@ -1,6 +1,5 @@
 .carrusel {
   position: relative;
-  max-width: 50vh;
   max-height: 60%;
   margin: auto;
   overflow: hidden;
@@ -73,4 +72,36 @@
 .indicador.active {
   background-color: #32fe21;
   display: flex;
+}
+
+@media (max-width: 430px) {
+  .carrusel {
+    width: 95%;
+  }
+  .carrusel-item img {
+    width: 80% vw;
+  }
+}
+@media (width: 1700px) {
+  .carrusel {
+    height: 100vh;
+    width: 80vh;
+  }
+  .carrusel .carrusel-inner {
+    width: 80vh;
+  }
+  .carrusel-item img {
+    width: 100%;
+    height: 80vh;
+  }
+}
+@media (min-width: 1920px) {
+  .carrusel {
+    width: 50vw;
+    height: 80vh;
+  }
+  .carrusel-item img {
+    width: 100%;
+    height: 75vh;
+  }
 }/*# sourceMappingURL=carusel.css.map */
