--- a/styles/cinta/cinta.scss
+++ b/styles/cinta/cinta.scss
@@ -1,10 +1,4 @@
-
-body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-}
-
+@use './mixins/mixins.scss' as mix;
 
 .cinta-container {
     width: 100%;
@@ -42,3 +36,5 @@ body {
         transform: translateX(-100%);
     }
 }
+
+
