--- a/styles/music_player/music_player.css
+++ b/styles/music_player/music_player.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 .music_player_3d {
-  height: 35%;
+  min-height: 40vh;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .player {
@@ -11,8 +11,7 @@
   padding: 20px;
   border-radius: 10px;
   text-align: center;
-  width: 50%;
-  max-height: 15vh;
+  width: 40%;
   overflow: hidden;
 }
 
@@ -97,4 +96,17 @@
 
 .songs li:hover {
   background-color: #e4fe03;
+}
+
+@media (max-width: 430px) {
+  .music_player_3d {
+    max-height: 15%;
+    width: 95%;
+  }
+}
+@media (width: 1360px) {
+  .player {
+    width: 45%;
+    height: 30vh;
+  }
 }/*# sourceMappingURL=music_player.css.map */
