--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,7 +59,6 @@ body {
 
 .carrusel {
   position: relative;
-  max-width: 50vh;
   max-height: 60%;
   margin: auto;
   overflow: hidden;
@@ -134,11 +133,42 @@ body {
   display: flex;
 }
 
+@media (max-width: 430px) {
+  .carrusel {
+    width: 95%;
+  }
+  .carrusel-item img {
+    width: 80% vw;
+  }
+}
+@media (width: 1360px) {
+  .carrusel {
+    height: 100vh;
+    width: 80vh;
+  }
+  .carrusel .carrusel-inner {
+    width: 80vh;
+  }
+  .carrusel-item img {
+    width: 100%;
+    height: 80vh;
+  }
+}
+@media (min-width: 1920px) {
+  .carrusel {
+    width: 50vw;
+    height: 80vh;
+  }
+  .carrusel-item img {
+    width: 100%;
+    height: 75vh;
+  }
+}
 .music_player_3d {
-  height: 35%;
+  min-height: 40vh;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .player {
@@ -146,8 +176,7 @@ body {
   padding: 20px;
   border-radius: 10px;
   text-align: center;
-  width: 50%;
-  max-height: 15vh;
+  width: 40%;
   overflow: hidden;
 }
 
@@ -234,6 +263,18 @@ body {
   background-color: #e4fe03;
 }
 
+@media (max-width: 430px) {
+  .music_player_3d {
+    max-height: 15%;
+    width: 95%;
+  }
+}
+@media (width: 1360px) {
+  .player {
+    width: 45%;
+    height: 30vh;
+  }
+}
 body {
   margin: 0;
   padding: 0;
@@ -273,6 +314,105 @@ body {
     transform: translateX(-100%);
   }
 } 
+.catalogo {
+  display: flex;
+  height: 100%;
+  width: 100%;
+}
+
+.product {
+  display: flex;
+  flex-direction: column;
+  width: 33%;
+  height: 33%;
+  background-color: rgba(228, 254, 3, 0.5019607843);
+  box-sizing: border-box;
+  border-radius: 5px;
+  margin: 5px;
+}
+.product img {
+  width: 100%;
+  height: 100%;
+}
+
+.class2 {
+  background-color: rgba(247, 175, 12, 0.5019607843);
+}
+
+.class3 {
+  background-color: rgba(50, 254, 33, 0.5019607843);
+}
+
+.description {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.car_function {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.car_function button {
+  width: 20%;
+  height: 40%;
+}
+
+@media (width: 1360px) {
+  .car_function {
+    justify-content: space-evenly;
+  }
+  .car_function button {
+    width: 10%;
+  }
+}
+@media (min-width: 1920px) {
+  .car_function button {
+    width: 10%;
+  }
+}
+.about_us {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 80px;
+  height: 100%;
+  width: 100%;
+}
+.about_us div {
+  margin: 5px;
+  padding: 10px;
+}
+
+.spanish {
+  background-color: rgba(50, 254, 33, 0.5019607843);
+  width: 95%;
+}
+
+.english {
+  background-color: rgba(247, 175, 12, 0.5019607843);
+  width: 95%;
+}
+
+#logo-ax {
+  height: 25vh;
+}
+
+@media (max-width: 430px) {
+  .about_us {
+    height: 60%;
+    margin-top: 0;
+  }
+}
+html {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   background-image: url("../global/FONDO.png");
   width: 100%;
@@ -287,6 +427,11 @@ nav {
   justify-content: space-between;
   display: flex;
   box-sizing: border-box;
+}
+
+.menu_button {
+  width: auto;
+  height: 90%;
 }
 
 .nav_menu {
@@ -315,4 +460,50 @@ footer div {
 }
 footer img {
   height: 5vh;
+}
+
+@media (max-width: 430px) {
+  body {
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  nav {
+    background-color: rgba(50, 254, 33, 0.85);
+    width: 100%;
+    height: 6vh;
+    align-items: center;
+    justify-content: space-between;
+    display: flex;
+    box-sizing: border-box;
+  }
+  .nav_menu {
+    background-color: rgba(50, 254, 33, 0.5019607843);
+    border-radius: 10px;
+    width: 15vw;
+    height: 5vh;
+  }
+  #barras {
+    color: #f70c0c;
+  }
+  footer {
+    width: 100%;
+    height: 30%;
+    background-color: rgba(50, 254, 33, 0.85);
+    font-family: monospace;
+    font: 400;
+    font-size: 0.6rem;
+  }
+  footer div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  footer img {
+    height: 5vh;
+  }
+}
+@media (width: 1360px) {
+  nav {
+    height: 15%;
+  }
 }/*# sourceMappingURL=styles.css.map */
