--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,7 +3,15 @@
 @use './carusel/carusel.scss';
 @use './music_player/music_player.scss';
 @use './cinta/cinta.css';
+@use './menu_compras/menu_compras.scss';
+@use './about_us/about_us.scss';
 
+
+html{
+    width: 100%;
+    height: 100%;
+    
+}
 body{
     background-image: url("../global/FONDO.png");   
     width: 100%;
@@ -14,7 +22,13 @@ body{
 nav{
     background-color: rgba(50, 254, 33, 0.85);
     @include mix.flexcontainer(100%,6vh,center,space-between);
+    
    
+}
+
+.menu_button{
+    width: auto;
+    height: 90%;
 }
 
 
@@ -28,6 +42,8 @@ nav{
 
 #barras{
     color: (#f7af0c);
+
+
 }
 
 footer{
@@ -48,4 +64,54 @@ footer{
 }
 
   
+@include mix.phones{
+
+
+body{
+   background-size: cover;
+   background-repeat: no-repeat;
     
+}
+
+nav{
+    background-color: rgba(50, 254, 33, 0.85);
+    @include mix.flexcontainer(100%,6vh,center,space-between);
+   
+}
+
+
+.nav_menu{
+    background-color: (#32fe2180);
+    border-radius: 10px;
+    width: 15vw;
+    height: 5vh;
+    
+}
+
+#barras{
+    color: (#f70c0c);
+
+}
+
+footer{
+    width: 100%;
+    height: 30%;
+    background-color: rgba(50, 254, 33, 0.85);
+    font-family: monospace;
+    font: 400;
+    font-size: 0.6rem;
+    & div{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    & img{
+        height: 5vh;
+    }
+}}  
+
+@include mix.tv{
+    nav{
+        height: 15%;
+    }
+}
