--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,6 +5,7 @@
 @use './cinta/cinta.css';
 @use './menu_compras/menu_compras.scss';
 @use './about_us/about_us.scss';
+@use './store_function/store_function.scss';
 
 
 html{
